Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90509

QWebEngineView is not being deleted using deleteLater

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.4
    • 5.12.10, 5.15.2
    • WebEngine
    • None
    • b93c7e4cdb516ade74c5de6a63b5e4d8bbf45f22 (qt/qtwebengine/dev)

    Description

      QWebEngineView object is not being deleted using deleteLater.
      See code snippet

      #include <QApplication>
      #include <QtWebEngine>
      #include <QtWebEngineWidgets>
      
      int main(int argc, char *argv[])
      {
      	QApplication a(argc, argv);
      	
      	auto view = new QWebEngineView;
      	auto page = new QWebEnginePage;
      	QObject::connect(page, &QObject::destroyed, view, &QObject::deleteLater);
      	view->setPage(page);
      	page->load(QUrl("https://google.com"));
      	view->show();
      	QTimer::singleShot(3000, page, &QObject::deleteLater);
      	
      	return a.exec();
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            hellclown Dmitry Yelizarov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes